css listo pero sin la animacion de los botones

--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
-
+<body class="color-change-5x">
+    <main class="flex">
+        <div class="table">
+            <div class="table-screen">
+                <div class="table-screen-control scroll">
+                    <p id="control">0</p>
+                </div>
+                <div class="table-screen-result scroll">
+                    <p id="result">0</p>
+                </div>
+            </div>
+            <div class="table-btn">
+                <a href="#" class="table-btn-single table-btn-0">0</a>
+                <a href="#" class="table-btn-single table-btn-1">1</a>
+                <a href="#" class="table-btn-single table-btn-2">2</a>
+                <a href="#" class="table-btn-single table-btn-3">3</a>
+                <a href="#" class="table-btn-single table-btn-4">4</a>
+                <a href="#" class="table-btn-single table-btn-5">5</a>
+                <a href="#" class="table-btn-single table-btn-6">6</a>
+                <a href="#" class="table-btn-single table-btn-7">7</a>
+                <a href="#" class="table-btn-single table-btn-8">8</a>
+                <a href="#" class="table-btn-single table-btn-9">9</a>
+                <a href="#" class="table-btn-single table-btn-op table-btn-plus">+</a>
+                <a href="#" class="table-btn-single table-btn-op table-btn--">-</a>
+                <a href="#" class="table-btn-single table-btn-op table-btn-x">x</a>
+                <a href="#" class="table-btn-single table-btn-op table-btn-÷">÷</a>
+                <a href="#" class="table-btn-single table-btn-point">.</a>
+                <a href="#" class="table-btn-single table-btn-equals">=</a>
+                <a href="#" class="table-btn-single table-btn-master table-btn-del">DEL</a>
+                <a href="#" class="table-btn-single table-btn-master table-btn-ac">AC</a>
+            </div>
+        </div>
+    </main>
 
     <script src="js/app.js"></script>
 </body>
