animacion hover de los botones

--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
                 </div>
             </div>
             <div class="table-btn">
-                <a href="#" class="table-btn-single table-btn-0">0</a>
-                <a href="#" class="table-btn-single table-btn-1">1</a>
-                <a href="#" class="table-btn-single table-btn-2">2</a>
-                <a href="#" class="table-btn-single table-btn-3">3</a>
-                <a href="#" class="table-btn-single table-btn-4">4</a>
-                <a href="#" class="table-btn-single table-btn-5">5</a>
-                <a href="#" class="table-btn-single table-btn-6">6</a>
-                <a href="#" class="table-btn-single table-btn-7">7</a>
-                <a href="#" class="table-btn-single table-btn-8">8</a>
-                <a href="#" class="table-btn-single table-btn-9">9</a>
-                <a href="#" class="table-btn-single table-btn-op table-btn-plus">+</a>
-                <a href="#" class="table-btn-single table-btn-op table-btn--">-</a>
-                <a href="#" class="table-btn-single table-btn-op table-btn-x">x</a>
-                <a href="#" class="table-btn-single table-btn-op table-btn-÷">÷</a>
-                <a href="#" class="table-btn-single table-btn-point">.</a>
-                <a href="#" class="table-btn-single table-btn-equals">=</a>
-                <a href="#" class="table-btn-single table-btn-master table-btn-del">DEL</a>
-                <a href="#" class="table-btn-single table-btn-master table-btn-ac">AC</a>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-0">0</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-1">1</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-2">2</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-3">3</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-4">4</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-5">5</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-6">6</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-7">7</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-8">8</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-9">9</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-plus">+</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn--">-</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-x">x</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-÷">÷</button>
+                <button href="#" class="btn-fade-up table-btn-single table-btn-point">.</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-equals">=</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-master table-btn-del">DEL</button>
+                <button href="#" class="btn-fade-in table-btn-single table-btn-master table-btn-ac">AC</button>
             </div>
         </div>
     </main>
