app.js - funciones de escritura hecha, documentacion y algo de orden

--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
                 </div>
             </div>
             <div class="table-btn">
-                <button href="#" class="btn-fade-up table-btn-single table-btn-0">0</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-1">1</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-2">2</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-3">3</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-4">4</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-5">5</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-6">6</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-7">7</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-8">8</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-9">9</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-plus">+</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn--">-</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-x">x</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-op table-btn-÷">÷</button>
-                <button href="#" class="btn-fade-up table-btn-single table-btn-point">.</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-equals">=</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-master table-btn-del">DEL</button>
-                <button href="#" class="btn-fade-in table-btn-single table-btn-master table-btn-ac">AC</button>
+                <button onclick="writeFromScreen('0')" class="btn-fade-up table-btn-single table-btn-0">0</button>
+                <button onclick="writeFromScreen('1')" class="btn-fade-up table-btn-single table-btn-1">1</button>
+                <button onclick="writeFromScreen('2')" class="btn-fade-up table-btn-single table-btn-2">2</button>
+                <button onclick="writeFromScreen('3')" class="btn-fade-up table-btn-single table-btn-3">3</button>
+                <button onclick="writeFromScreen('4')" class="btn-fade-up table-btn-single table-btn-4">4</button>
+                <button onclick="writeFromScreen('5')" class="btn-fade-up table-btn-single table-btn-5">5</button>
+                <button onclick="writeFromScreen('6')" class="btn-fade-up table-btn-single table-btn-6">6</button>
+                <button onclick="writeFromScreen('7')" class="btn-fade-up table-btn-single table-btn-7">7</button>
+                <button onclick="writeFromScreen('8')" class="btn-fade-up table-btn-single table-btn-8">8</button>
+                <button onclick="writeFromScreen('9')" class="btn-fade-up table-btn-single table-btn-9">9</button>
+                <button onclick="writeFromScreen('0')" class="btn-fade-in table-btn-single table-btn-op table-btn-plus">+</button>
+                <button onclick="writeFromScreen('-')" class="btn-fade-in table-btn-single table-btn-op table-btn--">-</button>
+                <button onclick="writeFromScreen('x')" class="btn-fade-in table-btn-single table-btn-op table-btn-x">x</button>
+                <button onclick="writeFromScreen('÷')" class="btn-fade-in table-btn-single table-btn-op table-btn-÷">÷</button>
+                <button onclick="writeFromScreen('.')" class="btn-fade-up table-btn-single table-btn-point">.</button>
+                <button onclick="writeFromScreen('equals')" class="btn-fade-in table-btn-single table-btn-equals">=</button>
+                <button onclick="writeFromScreen('del')" class="btn-fade-in table-btn-single table-btn-master table-btn-del">DEL</button>
+                <button onclick="writeFromScreen('ac')" class="btn-fade-in table-btn-single table-btn-master table-btn-ac">AC</button>
             </div>
         </div>
     </main>
