--- a/index.html
+++ b/index.html
@@ -24,25 +24,35 @@
                     <p id="result">0</p>
                 </div>
             </div>
-            <div class="table-btn">
-                <button onclick="writeFromScreen('0')" class="btn-fade-up table-btn-single table-btn-0">0</button>
-                <button onclick="writeFromScreen('1')" class="btn-fade-up table-btn-single table-btn-1">1</button>
-                <button onclick="writeFromScreen('2')" class="btn-fade-up table-btn-single table-btn-2">2</button>
-                <button onclick="writeFromScreen('3')" class="btn-fade-up table-btn-single table-btn-3">3</button>
-                <button onclick="writeFromScreen('4')" class="btn-fade-up table-btn-single table-btn-4">4</button>
-                <button onclick="writeFromScreen('5')" class="btn-fade-up table-btn-single table-btn-5">5</button>
-                <button onclick="writeFromScreen('6')" class="btn-fade-up table-btn-single table-btn-6">6</button>
-                <button onclick="writeFromScreen('7')" class="btn-fade-up table-btn-single table-btn-7">7</button>
-                <button onclick="writeFromScreen('8')" class="btn-fade-up table-btn-single table-btn-8">8</button>
-                <button onclick="writeFromScreen('9')" class="btn-fade-up table-btn-single table-btn-9">9</button>
-                <button onclick="writeFromScreen('0')" class="btn-fade-in table-btn-single table-btn-op table-btn-plus">+</button>
-                <button onclick="writeFromScreen('-')" class="btn-fade-in table-btn-single table-btn-op table-btn--">-</button>
-                <button onclick="writeFromScreen('x')" class="btn-fade-in table-btn-single table-btn-op table-btn-x">x</button>
-                <button onclick="writeFromScreen('÷')" class="btn-fade-in table-btn-single table-btn-op table-btn-÷">÷</button>
-                <button onclick="writeFromScreen('.')" class="btn-fade-up table-btn-single table-btn-point">.</button>
-                <button onclick="writeFromScreen('equals')" class="btn-fade-in table-btn-single table-btn-equals">=</button>
-                <button onclick="writeFromScreen('del')" class="btn-fade-in table-btn-single table-btn-master table-btn-del">DEL</button>
-                <button onclick="writeFromScreen('ac')" class="btn-fade-in table-btn-single table-btn-master table-btn-ac">AC</button>
+            <div>
+                <table class="table-btns">
+                    <tr>
+                        <td><button onclick="writeFromScreen('7')" class="table-btns-btn btns-fade-up table-btns-single table-btns-7">7</button></td>
+                        <td><button onclick="writeFromScreen('8')" class="table-btns-btn btns-fade-up table-btns-single table-btns-8">8</button></td>
+                        <td><button onclick="writeFromScreen('9')" class="table-btns-btn btns-fade-up table-btns-single table-btns-9">9</button></td>
+                        <td><button onclick="writeFromScreen('del')" class="table-btns-btn btns-fade-in table-btns-single table-btns-master table-btns-del">DEL</button></td>
+                        <td><button onclick="writeFromScreen('ac')" class="table-btns-btn btns-fade-in table-btns-single table-btns-master table-btns-ac">AC</button></td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="writeFromScreen('4')" class="table-btns-btn btns-fade-up table-btns-single table-btns-4">4</button></td>
+                        <td><button onclick="writeFromScreen('5')" class="table-btns-btn btns-fade-up table-btns-single table-btns-5">5</button></td>
+                        <td><button onclick="writeFromScreen('6')" class="table-btns-btn btns-fade-up table-btns-single table-btns-6">6</button></td>
+                        <td><button onclick="writeFromScreen('x')" class="table-btns-btn btns-fade-in table-btns-single table-btns-op table-btns-x">x</button></td>
+                        <td><button onclick="writeFromScreen('÷')" class="table-btns-btn btns-fade-in table-btns-single table-btns-op table-btns-÷">÷</button></td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="writeFromScreen('1')" class="table-btns-btn btns-fade-up table-btns-single table-btns-1">1</button></td>
+                        <td><button onclick="writeFromScreen('2')" class="table-btns-btn btns-fade-up table-btns-single table-btns-2">2</button></td>
+                        <td><button onclick="writeFromScreen('3')" class="table-btns-btn btns-fade-up table-btns-single table-btns-3">3</button></td>
+                        <td><button onclick="writeFromScreen('+')" class="table-btns-btn btns-fade-in table-btns-single table-btns-op table-btns-plus">+</button></td>
+                        <td rowspan="2"><button onclick="writeFromScreen('equals')" class="table-btns-btn btns-fade-in table-btns-single table-btns-equals">=</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button onclick="writeFromScreen('0')" class="table-btns-btn btns-fade-up table-btns-single table-btns-0">0</button></td>
+                        <td><button onclick="writeFromScreen('.')" class="table-btns-btn btns-fade-up table-btns-single table-btns-point">.</button></td>
+                        <td><button onclick="writeFromScreen('-')" class="table-btns-btn btns-fade-in table-btns-single table-btns-op table-btns--">-</button></td>
+                    </tr>
+                </table>
             </div>
         </div>
     </main>
