--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <td><button onclick="writeFromScreen('2')" class="table-btns-btn btns-fade-up table-btns-single table-btns-2">2</button></td>
                         <td><button onclick="writeFromScreen('3')" class="table-btns-btn btns-fade-up table-btns-single table-btns-3">3</button></td>
                         <td><button onclick="writeFromScreen('+')" class="table-btns-btn btns-fade-in table-btns-single table-btns-op table-btns-plus">+</button></td>
-                        <td rowspan="2"><button onclick="writeFromScreen('equals')" class="table-btns-btn btns-fade-in table-btns-single table-btns-equals">=</button></td>
+                        <td rowspan="2"><button onclick="calculate(input)" class="table-btns-btn btns-fade-in table-btns-single table-btns-equals">=</button></td>
                     </tr>
                     <tr>
                         <td colspan="2"><button onclick="writeFromScreen('0')" class="table-btns-btn btns-fade-up table-btns-single table-btns-0">0</button></td>
